# nexora-ai

./: ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  example_usage.py  main.py  pyproject.toml  requirements.txt  setup.py  test_output.txt
data/: housing.csv
data/artifacts/: report_4ec737e1.html  report_4ec737e1.json  report_93f5cfe2.html  report_93f5cfe2.json  report_c15b5e54.html  report_c15b5e54.json
src/nexora/: __init__.py
src/nexora/adapters/: __init__.py
src/nexora/adapters/explainability/: __init__.py
src/nexora/adapters/feature_engineering/: __init__.py
src/nexora/adapters/genai/: __init__.py
src/nexora/adapters/ingestion/: __init__.py
src/nexora/adapters/modeling/: __init__.py
src/nexora/adapters/reporting/: __init__.py
src/nexora/adapters/validation/: __init__.py
src/nexora/application/: __init__.py  ports.py  use_cases.py
src/nexora/core/: __init__.py  base.py  config.py  exceptions.py  logger.py
src/nexora/domain/: __init__.py  entities.py
src/nexora/explainability/: explainer_interface.py  shap_wrapper.py
src/nexora/feature_engineering/: auto_imputer.py  engineer_interface.py
src/nexora/genai/: adapter_interface.py  llm_client.py  mock_llm_adapter.py  prompt_builder.py
src/nexora/infrastructure/: __init__.py  config.py
src/nexora/ingestion/: connector_interface.py  csv_connector.py
src/nexora/modeling/: classification.py  evaluator.py  model_interface.py  regression.py
src/nexora/orchestration/: __init__.py  pipeline.py  workflow_orchestrator.py
src/nexora/reporting/: report_generator.py  report_interface.py  report_template.html
src/nexora/validation/: anomaly_detector.py  schema_validator.py  validator_interface.py
src/nexora/web/: api.py  endpoints.py  schemas.py
src/nexora/web/static/: style.css
src/nexora/web/templates/: index.html
tests/: conftest.py
tests/unit/: test_components.py  test_core.py  test_ingestion_validation.py
tests/unit/core/: test_exceptions.py
tests/unit/domain/: test_entities.py
tests/web/: test_api.py
